investment copy, localize team intros

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         <div class="heading-block center">
             <h2>{% t index.navbar-research %}</h2>
         </div>
+        <div id="research-desc"></div>
+        <div id="research-graphic"></div>
     </section>
 
     <section id="section-dfinity" class="page-section section nomargin bg-stringlabs-dark dark full-height">
@@ -225,7 +227,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     					<div class="team-desc">
     						<div class="team-title"><h4>Dominic Williams</h4><span>President/CTO</span></div>
     						<div class="team-content">
-    							<p>Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech. Dominic is a bit of a hippy, but once won prizes in Computer Science at London University.</p>
+    						    <p>{% t index.team-dominic-intro %}</p>
     						</div>
     						<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
     							<i class="icon-twitter"></i>
@@ -250,7 +252,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     					<div class="team-desc">
     						<div class="team-title"><h4>Tom Ding</h4><span>CEO</span></div>
     						<div class="team-content">
-    							<p>Serial entrepreneur, founder of Blockchain University and previously a senior manager at eBay who comes from Shanghai. Tom caught the blockchain wave in 2013 and hasn't looked back. Back in the day, he graduated in Computer Science at age 14 and from business school at 20. Tom's a regular startup and crypto pundit.</p>
+    							<p><p>{% t index.team-tom-intro %}</p></p>
     						</div>
     						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
     							<i class="icon-twitter"></i>
@@ -274,7 +276,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     					<div class="team-desc">
     						<div class="team-title"><h4>Timo Hanke</h4><span>Chief Cryptographer</span></div>
     						<div class="team-content">
-    							<p>Once an Aachen University mathematics and cryptography professor in Germany, Timo caught the decentralization bug. Timo has worked on numerous crypto products and prior to joining String Labs invented and patented the famous AsicBoost (http://asicboost.com/). At String he works on Third Generation crypto systems.</p>
+    							<p><p>{% t index.team-timo-intro %}</p></p>
     						</div>
     						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
     							<i class="icon-twitter"></i>
@@ -299,7 +301,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     					<div class="team-desc">
     						<div class="team-title"><h4>Enzo Haussecker</h4><span>Senior Software Engineer</span></div>
     						<div class="team-content">
-    							<p>Enzo has built and maintained high-throughput computing infrastructure for several high-growth startups in Silicon Valley. He is passionate about cloud computing, automation, and loves to share his knowledge and enthusiasm with others. Enzo holds a Bachelor of Science degree in Applied Mathematics from the University of California at San Diego.</p>
+    							<p><p>{% t index.team-enzo-intro %}</p></p>
     						</div>
     						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
     							<i class="icon-linkedin"></i>
@@ -319,7 +321,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     					<div class="team-desc">
     						<div class="team-title"><h4>Tomomi Menjo</h4><span>Project Coordinator</span></div>
     						<div class="team-content">
-    							<p>A highly dynamic coordinator of String projects and business development activity, Tomomi was previously at the Women's Startup Lab in Menlo Park. She is a bilingual Japanese speaker, recently graduating Cum Laude with a B.A. in Communication from Santa Clara University. She proves you don't have to be a crypto geek to help drive String!</p>
+    							<p>{% t index.team-tomomi-intro %}</p>
     						</div>
     						<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
     							<i class="icon-linkedin"></i>
@@ -336,7 +338,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     					<div class="team-desc">
     						<div class="team-title"><h4>Jon Ball</h4><span>Creative Lead</span></div>
     						<div class="team-content">
-    							<p>As an internationally renowned and influential designer, Jon has worked for many, many well known names, contributing a unique and highly original sense of style and stunning visions in print, digital and video. Jon also once worked with Dominic to create a "growth monster" MMO that reached 3M users. A rockstar of design!</p>
+    							<p>{% t index.team-jon-intro %}</p>
     						</div>
     						<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
     							<i class="icon-github"></i>
@@ -355,13 +357,9 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             <h2>{% t index.navbar-investment %}</h2>
         </div>
         <div class="investment-desc col-md-9">
-            <h2 class="investment-title">
-                Decentralization is a massive movement and technology undertake with so many fascinating pieces to it. There are already many startups, organizations and researchers working on different applications and advancing the core technology.
-            </h2>
+            <h2 class="investment-title">{% t index.investment-title %}</h2>
             <div class="investment-content">
-                <p>
-                    We are blessed with a unique cross-discipline team of leading cryptographers, distributed protocols researchers/engineers mathematicians and economists. What particularly interest us are those complex cross-disciplinary problems, that could become the biggest game-changer, common building blocks, and enablers massively accelerating the whole ecosystem.
-                </p>
+                <p>{% t index.investment-intro %}</p>
             </div>
         </div>
     </section>
