--- a/index.html
+++ b/index.html
@@ -94,12 +94,41 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             <h2>{% t index.navbar-research %}</h2>
         </div>
         <div id="research-desc">
-            <h3>{% t index.research-intro %}</h3>
+            <h3>{% t index.research-title %}</h3>
             <p>{% t index.research-intro %}</p>
             <p>{% t index.research-desc %}</p>
         </div>
         <table id="research-table">
-            [colorful table]
+            <colgroup>
+                <col width="200">
+                <col width="300">
+                <col width="100">
+                <col width="100">
+                <col width="100">
+                <col width="100">
+                <col width="100">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <td>Cryptography</td>
+                    <td>Distributed Computing</td>
+                    <td>Economics</td>
+                    <td>Programming Languages</td>
+                    <td>Virtual Machines</td>
+                    <td>Trusted Computing</td>
+                    <td>Computer Security</td>
+                </tr>
+                <tr>
+                    <td>Topic Topic</td>
+                    <td>Topic Topic Topic</td>
+                    <td colspan="5">Topic Topic Topic Topic Topic</td>
+                </tr>
+                <tr>
+                    <td>Goal Goal</td>
+                    <td>Goal Goal Goal</td>
+                    <td colspan="5">Goal Goal Goal Goal Goal</td>
+                </tr>
+            </tbody>
         </table>
     </section>
 
