table layout styles

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         <div class="heading-block center">
             <h2>{% t index.navbar-research %}</h2>
         </div>
-        <div id="research-desc">
+        <div id="research-desc" class="pull-left">
             <h3>{% t index.research-title %}</h3>
             <p>{% t index.research-intro %}</p>
             <p>{% t index.research-desc %}</p>
@@ -110,29 +110,70 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             </colgroup>
             <tbody>
                 <tr>
-                    <td>Cryptography</td>
-                    <td>Distributed Computing</td>
-                    <td>Economics</td>
-                    <td>Programming Languages</td>
-                    <td>Virtual Machines</td>
-                    <td>Trusted Computing</td>
-                    <td>Computer Security</td>
+                    <td>
+                        <div>Cryptography</div>
+                    </td>
+                    <td>
+                        <div>Distributed Computing</div>
+                    </td>
+                    <td>
+                        <div>Economics</div>
+                    </td>
+                    <td>
+                        <div>Programming Languages</div>
+                    </td>
+                    <td>
+                        <div>Virtual Machines</div>
+                    </td>
+                    <td>
+                        <div>Trusted Computing</div>
+                    </td>
+                    <td>
+                        <div>Computer Security</div>
+                    </td>
                 </tr>
-                <tr>
-                    <td>Topic Topic</td>
-                    <td>Topic Topic Topic</td>
-                    <td colspan="5">Topic Topic Topic Topic Topic</td>
+                <tr class="panels">
+                    <td>
+                        <div>Topic</div>
+                        <div>Topic</div>
+                    </td>
+                    <td>
+                        <div>Topic</div>
+                        <div>Topic</div>
+                        <div>Topic</div>
+                    </td>
+                    <td colspan="5">
+                        <div>Topic</div>
+                        <div>Topic</div>
+                        <div>Topic</div>
+                        <div>Topic</div>
+                        <div>Topic</div>
+                    </td>
                 </tr>
-                <tr>
-                    <td>Goal Goal</td>
-                    <td>Goal Goal Goal</td>
-                    <td colspan="5">Goal Goal Goal Goal Goal</td>
+                <tr class="panels">
+                    <td>
+                        <div>Goal</div>
+                        <div>Goal</div>
+                    </td>
+                    <td>
+                        <div>Goal</div>
+                        <div>Goal</div>
+                        <div>Goal</div>
+                    </td>
+                    <td colspan="5">
+                        <div>Goal</div>
+                        <div>Goal</div>
+                        <div>Goal</div>
+                        <div>Goal</div>
+                        <div>Goal</div>
+                    </td>
                 </tr>
             </tbody>
         </table>
+        <div class="clearfix"></div>
     </section>
 
-    <section id="section-dfinity" class="page-section section nomargin bg-stringlabs-dark dark full-height">
+    <section id="section-dfinity" class="page-section section nomargin bg-stringlabs dark full-height">
         <div class="container clearfix">
             <div class="heading-block center">
                 <h2>{% t index.dfinity-title %}</h2>
