talks styles, remove research table

--- a/index.html
+++ b/index.html
@@ -98,78 +98,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             <p>{% t index.research-intro %}</p>
             <p>{% t index.research-desc %}</p>
         </div>
-        <table id="research-table">
-            <colgroup>
-                <col width="200">
-                <col width="300">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-            </colgroup>
-            <tbody>
-                <tr>
-                    <td>
-                        <div>Cryptography</div>
-                    </td>
-                    <td>
-                        <div>Distributed Computing</div>
-                    </td>
-                    <td>
-                        <div>Economics</div>
-                    </td>
-                    <td>
-                        <div>Programming Languages</div>
-                    </td>
-                    <td>
-                        <div>Virtual Machines</div>
-                    </td>
-                    <td>
-                        <div>Trusted Computing</div>
-                    </td>
-                    <td>
-                        <div>Computer Security</div>
-                    </td>
-                </tr>
-                <tr class="panels">
-                    <td>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                    <td>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                    <td colspan="5">
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                </tr>
-                <tr class="panels">
-                    <td>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                    <td>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                    <td colspan="5">
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="center">[ research infographic ]</div>
         <div class="clearfix"></div>
     </section>
 
